2002-04-02  Darin Adler  <darin@apple.com>

	* src/kwq/kwqdebug.h: Turn off logging when xNDEBUG is defined.
	Remove unused stuff. Add checking for printf parameters.
	* src/kwq/kwqdebug.mm: Remove unused variants.

	* src/kwq/KWQApplication.mm:
	* src/kwq/KWQKGlobal.mm:
	* src/kwq/KWQKloader.mm:
	* src/kwq/KWQObject.mm:
	* src/kwq/KWQString.mm:
	* src/kwq/KWQToolTip.mm:
	* src/kwq/KWQWidget.mm:
	* src/kwq/WCPlugin.mm:
	* src/kwq/WCPluginDatabase.mm:
	* src/kwq/npapi.mm:
	Fix types in log statements caught by the compiler.

2002-04-02  Richard Williamson  <rjw@apple.com>

        Fixed a fix, shoulda' been a #ifndef to exclude unnecessary code.
        
	* src/kdelibs/khtml/rendering/render_replaced.cpp: (RenderWidget::detach):

2002-04-02  Richard Williamson  <rjw@apple.com>

        More noisy bulletproofing.  Still need to find source of problem.
        
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::~KHTMLPart), (KHTMLPart::slotData),
	(KHTMLPart::write), (KHTMLPart::end):

2002-04-02  Darin Adler  <darin@apple.com>

        Fix some small storage leaks.

	* src/kwq/KWQWidget.mm: (QWidget::QWidget): Use a single shared default style
        instead of creating a new one for each widget.
        (QWidget::setFont): Since we store a QFont here, we don't have to delete the
        old font and we don't leak.
        (QWidget::setCursor): Since now store a QCursor here, we don't have to delete
        the old cursor.
        Also removed a lot of unused code in here.
        
	* src/kwq/KWQKURL.mm: Minor code cleanup.

2002-04-02  Richard Williamson  <rjw@apple.com>

        Added ref() of part from KHTMView.
        Added log to catch m_doc == 0 case.  Should never happen.
        
	* src/kdelibs/khtml/khtmlview.cpp: (KHTMLView::KHTMLView),
	(KHTMLView::~KHTMLView):
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::write):

2002-04-02  Richard Williamson  <rjw@apple.com>

        Removed unnecessary and erroneous call to CGContextSetCharacterSpacing.
        