@@ -1,3 +1,9 @@
+2002-04-03  Maciej Stachowiak  <mjs@apple.com>
+
+	* src/kwq/kwqdebug.mm: (KWQGetLogLevel): Allocate and release
+	NSScanner instead of using an autoreleased one, to fix Jersey
+	redness whereby the regression tests leak.
+
 2002-04-02  Darin Adler  <darin@apple.com>
 
 	* src/kwq/kwqdebug.h: Turn off logging when xNDEBUG is defined.
